--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nodeexpress",
   "version": "0.0.0",
   "private": true,
+  "scripts" : {
+      "start": "node app.js"
+    },
   "dependencies": {
     "blueimp-file-upload-expressjs": "^0.3.2",
     "body-parser": "^1.12.2",
